Add comment describing relevant JVM flags to project config